manifests/sandbox/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sandbox
  labels:
    app: sandbox
spec:
  replicas: 5
  selector:
    matchLabels:
      app: sandbox
  template:
    metadata:
      labels:
        app: sandbox
    spec:
      containers:
        - name: nginx
          image: nginx:1.25.2
          ports:
            - containerPort: 80
